# Netflix-Project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  package-lock.json
MainApi/: Dockerfile  app.js  docker-compose.yml  package-lock.json  package.json  test.py
MainApi/config/: .env
MainApi/controllers/: category.js  movie.js  search.js  token.js  user.js
MainApi/middleware/: uploadMiddleware.js
MainApi/models/: category.js  counter.js  movie.js  search.js  token.js  user.js
MainApi/routes/: auth.js  authenticate.js  category.js  movie.js  search.js  user.js  watched.js
MainApi/routs/: movie.js  token.js
MainApi/services/: category.js  movie.js  recommendation.js  search.js  token.js  user.js
MainApi/test/: Dockerfile  test.py
MainApi/utils/: socketClient.js
RecommendationAlgorithm/: CMakeLists.txt
RecommendationAlgorithm/src/: commonMovies.cpp  commonMovies.h
RecommendationAlgorithm/test/: algorithmTest.cpp  algorithmTest.h  commonMoviesTest.cpp
RecommendationSystem/: CMakeLists.txt  Dockerfile  docker-compose.yml
RecommendationSystem/algorithm/: commonMovies.cpp
RecommendationSystem/algorithmTests/: commonMoviesTest.h
RecommendationSystem/data/users/: 1  10  2  3  4  5  6  7  8  9
RecommendationSystem/src/: ConsoleMenu.cpp  ConsoleMenu.h  DataManager.cpp  DataManager.h  FilePersistence.cpp  FilePersistence.h  ICommand.cpp  ICommand.h  IMenu.h  IPersistence.h  Movie.cpp  Movie.h  User.cpp  User.h  add.cpp  add.h  app.cpp  app.h  help.cpp  help.h  main.cpp  movie.cpp  movie.h  recommend.cpp  recommend.h  recommendAlgo.cpp  recommendAlgo.h  recommendations.cpp  recommendations.h  user.cpp  user.h
RecommendationSystem/src/Client/: Dockerfile
RecommendationSystem/src/Commands/: Delete.cpp  Delete.h  add.cpp  add.h  help.cpp  help.h  patch.cpp  patch.h  post.cpp  post.h  recommend.cpp  recommend.h  recommendAlgo.cpp  recommendAlgo.h
RecommendationSystem/src/Core/: app.cpp  app.h  main.cpp
RecommendationSystem/src/Data/: DataManager.cpp  DataManager.h  FilePersistence.cpp  FilePersistence.h
RecommendationSystem/src/Interfaces/: IPersistence.h
RecommendationSystem/src/Menus/: ConsoleMenu.cpp  ConsoleMenu.h  IMenu.cpp  IMenu.h  SocketMenu.cpp  SocketMenu.h
RecommendationSystem/src/Server/: ClientHandler.cpp  ClientHandler.h  Executor.cpp  Executor.h  Runnable.h  Server.cpp  Server.h  SimpleExecutor.cpp  SimpleExecutor.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h
RecommendationSystem/src/objects/: Client.py  Movie.cpp  Movie.h  User.h
RecommendationSystem/test/: CMakeLists.txt  SumMoviesRelevanceTest.cpp  SumMoviesRelevanceTest.h  TestCountCommonMoviesWithGivenUser.cpp  TestcountCommonMoviesWithGivenUser.cpp  TestcountCommonMoviesWithGivenUser.h  combineAlgoTest.cpp  combineAlgoTest.h  recommendations.cpp  test1.cpp  test1.h  test2.cpp  test2.h  testWatchedDesiredMovie.cpp  test_Delete.cpp  test_Delete.h  test_add.cpp  test_add.h  test_algo.h  test_client_using_server.py  test_helper_server.py  test_movie.cpp  test_movie.h  test_persistence.cpp  test_persistence.h  test_recommendAlgo.cpp  test_recommendAlgo.h  test_user.cpp  test_user.h
netflix-android/: settings.gradle
netflix-android/app/: .gitignore  build.gradle
netflix-android/app/src/androidTest/java/com/example/netflix_android/: ExampleInstrumentedTest.java
netflix-android/app/src/main/: AndroidManifest.xml
netflix-android/app/src/main/java/com/example/netflix_android/Adapters/: AdminCategoryAdapter.java  CategoryAdapter.java  MoviesAdapter.java  SearchAdapter.java
netflix-android/app/src/main/java/com/example/netflix_android/Api/: AuthApi.java  CategoryApi.java  MovieApi.java  MoviesApi.java  RecommendationApi.java  SearchApi.java
netflix-android/app/src/main/res/drawable/: button_bg.xml  custom_thumb.xml  gradient_overlay.xml  input_bg.xml  input_cast.xml  netflix_spinner_bg.xml  search_background.xml
netflix-android/app/src/main/res/layout/: activity_add_category.xml  activity_admin_settings.xml  activity_login.xml  activity_main.xml  activity_movie_detail.xml  activity_movie_form.xml  activity_search.xml  activity_signup.xml  activity_video_player.xml  activity_welcome.xml  category_row.xml  custom_exo_controls.xml  item_cast_member.xml  item_category.xml  movie_card.xml  movie_detail_layout.xml  netflix_top_menu.xml
netflix-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
netflix-android/app/src/main/res/values-night/: colors.xml  themes.xml
netflix-android/app/src/test/java/com/example/netflix_android/: ExampleUnitTest.java
netflix-android/gradle/: libs.versions.toml
netflix-android/gradle/wrapper/: gradle-wrapper.properties
netflix-web/: package-lock.json  package.json
netflix-web/public/: index.html
netflix-web/src/: App.js  index.css  index.js
netflix-web/src/components/: ClickableLogo.js  FeaturedVideo.js  Header.js  HelperTopMenu.css  Hero.css  Hero.js  Home.css  Home.js  Login.css  Login.js  Signup.css  Signup.js  TopMenu.css  TopMenu.js  VideoPlayer.css  VideoPlayer.js  categoryRow.js  movieBox.css  movieBox.js  movieDetailsModal.css  movieDetailsModal.js  newHeader.js
netflix-web/src/components/Admin/: Admin.css  Admin.js  CategoriesList.js  CreateCategoryForm.css  CreateCategoryForm.js  CreateMovieForm.css  CreateMovieForm.js  categoriesAdminPage.js  categoriesList.css  categoryBox.css  categoryBox.js  moviesAdminPage.js
netflix-web/src/components/FirstPage/: Hero.css  Hero.js
netflix-web/src/components/Home/: FeaturedVideo.css  FeaturedVideo.js  Home.js  categoryRow.css  categoryRow.js  movieBox.css  movieBox.js  movieDetailsModal.css  movieDetailsModal.js
netflix-web/src/components/Login/: Login.css  Login.js  Signup.css  Signup.js
netflix-web/src/components/Utils/: ClickableLogo.js  HelperTopMenu.js  SearchPage.css  SearchPage.js  TopMenu.css  TopMenu.js  VideoPlayer.js
netflix-web/src/pages/: HomePage.js
netflix-web/src/styles/: Header.css  Hero.css
wiki/: android_example.md  installation.md  web_example.md
(+47 files in other folders)
